# Laboruebungen

./: README.md
Datenbanksysteme/: DDL-Statement_1.txt  Script-1_DDL.sql  Script-2._INSERTS.sql  Script-3_DDL_pretty.sql
Datenbanksysteme/Diagramme/: Use_Cases.drawio  Use_Cases_V2.drawio
Datenbanksysteme/Library_Project/: Library.dmd
Datenbanksysteme/Scripte/: Script-1_Anwendung.sql  Script-2._INSERTS.sql  Script-2_2._INSERTS.sql  Script-2_Anwendung.sql  Script-3_2_DDL_pretty.sql  Script-3_Anwendung.sql  Script-4_Optimizations_DDL.sql
Datenbanksysteme/dbspython_library/: .gitignore  README.md  credentials.json  credentials_helper.py  database_helper.py  main.py  my_sql_file.yaml  prettyprint.py  pyproject.toml
Microcontroller/: sprite.h
Microcontroller/LAB01_PIO/: platformio.ini
Microcontroller/mic-ss2026-lastowickalux-dungeoncrawler-main/: README.md
SSY/: Notes to SSY.docx  main.aux  main.out  main.synctex(busy)  main.tex  main.toc
SSY/Abbildungen/: bode_aufgabe_a_1.tikz  bode_aufgabe_a_2.tikz  bode_aufgabe_a_3.tikz  bode_aufgabe_b_1.tikz  bode_aufgabe_b_2.tikz  bode_aufgabe_b_3.tikz  bode_aufgabe_b_4.tikz  bode_aufgabe_b_5.tikz  bode_aufgabe_c_1.tikz  bode_aufgabe_c_2.tikz  bode_aufgabe_c_3.tikz  bode_aufgabe_c_4.tikz  bode_aufgabe_c_5.tikz  nyquist_aufgabe_7A_1.tikz  step_resp_aufgabe_7A_1.tikz  step_resp_aufgabe_7A_2.tikz  step_resp_aufgabe_7A_3.tikz  step_resp_aufgabe_7A_5.tikz  step_resp_aufgabe_7A_6.tikz  step_resp_aufgabe_7A_7.tikz  step_resp_aufgabe_7A_9.tikz  step_resp_aufgabe_a_1.tikz  step_resp_aufgabe_a_2.tikz  step_resp_aufgabe_b_1.tikz  (+7 more)
(+63 files in other folders)
